--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -36,9 +36,9 @@
     }
 
     &--secondary {
-        background-color: #d6d3d3;
+        background-color: #000;
         border: none;
-        color: #989797;
+        color: #fff;
 
         &:active, &:focus {
             outline: none;
