--- a/src/styles/layouts/_footer.scss
+++ b/src/styles/layouts/_footer.scss
@@ -2,7 +2,7 @@
     background-color: #fff;
     color: #000;
     // height: 20rem;
-    padding: 0 10rem;
+    padding: 0 10rem 10rem 10rem;
     margin-top: 10rem;
     width: 100%;
 
