--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 @import './components/cart';
 @import './components/select-size';
 @import './components//collection-items';
+@import './components/site-modal';
 
 @import './layouts/layout';
 @import './layouts/container';
