--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -12,4 +12,10 @@
             @content;
         }
     }
+
+    @if ($bp == sm-screen) {
+        @media (max-width: 500px) {
+            @content;
+        }
+    }
 }
