--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -10,7 +10,7 @@
     left: 0;
     padding: 3rem;
     width: 100%;
-    z-index: 10000;
+    // z-index: 1000;
 
     &__links {
         list-style-type: none;
