--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,4 +25,6 @@
 @import './pages/product';
 @import './pages/shop';
 @import './pages/not-found';
-@import './pages/faq'
+@import './pages/faq';
+@import './pages/orders';
+@import './pages/delivery';
